--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Futuristic Data Insights</title>
   <link rel="stylesheet" href="styles.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2024 Election Spend Analysis</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
