--- a/home.html
+++ b/home.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Futuristic Data Insights</title>
   <link rel="stylesheet" href="styles.css">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2024 Election Spend Analysis</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -19,7 +15,7 @@
         <h3>Vighnesh J S</h3>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">Other Major Projects</button>
+        <button class="dropbtn">Click To See Other Major Projects</button>
         <div class="dropdown-content">
             <a href="#" class="project-link" data-project="Vogi The Chat Bot">Vogi The Chat Bot</a>
             <a href="#" class="project-link" data-project="Neural Machine Translation">Neural Machine Translation</a>
