--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <h3>Vighnesh J S</h3>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">Click To See Other Major Projects</button>
+        <button class="dropbtn">Click To See My Other Major Projects</button>
         <div class="dropdown-content">
             <a href="#" class="project-link" data-project="Vogi The Chat Bot">Vogi The Chat Bot</a>
             <a href="#" class="project-link" data-project="Neural Machine Translation">Neural Machine Translation</a>
