--- a/home.html
+++ b/home.html
@@ -9,13 +9,32 @@
 <body>
 
   <header>
+    <nav class="navigation">
+        <span class="nav-item">Home</span>
+        <span class="nav-separator">/</span>
+        <span class="nav-item">Election Analysis</span>
+    </nav>
+<!-- Navigation Bar -->
+<div class="navigation">
+    <div class="nav-item">Home / DataAnalytics</div>
+</div>
+
+<!-- Search Bar -->
+<div class="search-container">
+    <form action="#" method="get"> <!-- Use # if you don't have a backend -->
+        <input type="text" placeholder="Search..." name="query" required /> <!-- Add a name attribute -->
+        <button type="submit">Search</button> <!-- Use type="submit" for button -->
+    </form>
+</div>
+
+    
     <h1>2024 Election Spend Analysis</h1>
     <p>This article analyzes ad spending data collected from Social Medias, examining the financial impact on voter patterns across various states..</p>
     <div id="name" class="align-right"> <!-- Add the class for alignment -->
         <h3>Vighnesh J S</h3>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">Click To See My Other Major Projects</button>
+        <button class="dropbtn">Click To See Other Major Projects</button>
         <div class="dropdown-content">
             <a href="#" class="project-link" data-project="Vogi The Chat Bot">Vogi The Chat Bot</a>
             <a href="#" class="project-link" data-project="Neural Machine Translation">Neural Machine Translation</a>
@@ -105,6 +124,7 @@
 
 <script src="script.js"></script> 
 <div>
+    
 
 
 </body>
