deletion of projects

--- a/home.html
+++ b/home.html
@@ -28,25 +28,7 @@
     <div class="dropdown">
         <button class="dropbtn">Click To See Other Major Projects</button>
         <div class="dropdown-content">
-            <a href="#" class="project-link" data-project="Vogi The Chat Bot">Vogi The Chat Bot</a>
-            <a href="#" class="project-link" data-project="Neural Machine Translation">Neural Machine Translation</a>
-            <a href="#" class="project-link" data-project="Object Detection with YOLO">Object Detection with YOLO</a>
-            <a href="#" class="project-link" data-project="Face Recognition System">Face Recognition System</a>
-            <a href="#" class="project-link" data-project="Text Generation with RNNs">Text Generation with RNNs</a>
-            <a href="#" class="project-link" data-project="Image Style Transfer">Image Style Transfer</a>
-            <a href="#" class="project-link" data-project="Reinforcement Learning for Game AI (Beta)">Reinforcement Learning for Game AI (Beta)</a>
-            <a href="#" class="project-link" data-project="Breast Cancer Detection (Beta)">Breast Cancer Detection (Beta)</a>
-            <a href="#" class="project-link" data-project="3D Object Reconstruction">3D Object Reconstruction</a>
-            <a href="#" class="project-link" data-project="Generative Adversarial Networks (GANs) for Image Generation">GANs for Image Generation</a>
-            <a href="#" class="project-link" data-project="Emotion Recognition System">Emotion Recognition System</a>
-            <a href="#" class="project-link" data-project="Sentiment Analysis on Social Media Data">Sentiment Analysis on Social Media</a>
-            <a href="#" class="project-link" data-project="Autonomous Vehicle Simulation">Autonomous Vehicle Simulation</a>
-            <a href="#" class="project-link" data-project="Music Generation with LSTM Networks">Music Generation with LSTMs</a>
-            <a href="#" class="project-link" data-project="Handwritten Digit Recognition with CNNs">Digit Recognition with CNNs</a>
-            <a href="#" class="project-link" data-project="Personalized Recommendation System">Recommendation System</a>
-            <a href="#" class="project-link" data-project="Chatbot with NLP">Chatbot with NLP</a>
-            <a href="#" class="project-link" data-project="Image Segmentation using U-Net">Image Segmentation with U-Net</a>
-            <a href="#" class="project-link" data-project="AI-Powered Stock Market Prediction">Stock Market Prediction</a>
+            <a href="#" class="project-link" data-project="Currently the projects are not listed">Vogi The Chat Bot</a>
         </div>
     </div>
     
