--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <div class="dropdown">
         <button class="dropbtn">Click To See Other Major Projects</button>
         <div class="dropdown-content">
-            <a href="#" class="project-link" data-project="Currently the projects are not listed">Vogi The Chat Bot</a>
+            <a href="#" class="project-link" data-project="Currently the projects are not listed">Not Listed</a>
         </div>
     </div>
     
